--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"php": "^7.3||^8.0",
 		"codeigniter4/framework": "^4",
-		"myth/auth": "^1.0"
+		"myth/auth": "^1.0",
+		"midtrans/midtrans-php": "^2.4"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9",
